// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`View NpcEdit should render w/ minimum props 1`] = `
Array [
  <div
    className="nice-panel npc-edit__description"
    id={undefined}
  >
    <div
      className="nice-panel-heading"
    >
      Description
    </div>
    <div
      className="nice-panel-content"
    >
      <div
        className="nice-control-group"
      >
        <span
          className="nice-input-addon"
        >
          Campaign
        </span>
        <div
          className="nice-dropdown nice-form-control"
        >
          <button
            className="nice-btn"
            disabled={false}
            onClick={[Function]}
          >
            Campaign...
            <i
              className="icon fa-angle-down"
            />
          </button>
          <ul
            className="dropdown-menu"
            onClick={[Function]}
          />
        </div>
      </div>
      <div
        className="nice-control-group"
      >
        <span
          className="nice-input-addon"
        >
          Name
        </span>
        <input
          className="nice-form-control"
          disabled={undefined}
          onChange={[Function]}
          onKeyPress={null}
          placeholder="Name..."
          type={undefined}
          value=""
        />
      </div>
      <div
        className="nice-control-group"
      >
        <span
          className="nice-input-addon"
        >
          Location
        </span>
        <input
          className="nice-form-control"
          disabled={undefined}
          onChange={[Function]}
          onKeyPress={null}
          placeholder="Location..."
          type={undefined}
          value=""
        />
      </div>
      <div
        className="nice-control-group"
      >
        <span
          className="nice-input-addon"
        >
          Organization
        </span>
        <input
          className="nice-form-control"
          disabled={undefined}
          onChange={[Function]}
          onKeyPress={null}
          placeholder="Organization..."
          type={undefined}
          value=""
        />
      </div>
      <div
        className="nice-control-group"
      >
        <span
          className="nice-input-addon"
        >
          Race
        </span>
        <div
          className="nice-dropdown nice-form-control"
        >
          <input
            className="nice-form-control"
            disabled={undefined}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyPress={null}
            placeholder="Race..."
            type={undefined}
            value=""
          />
          <ul
            className="dropdown-menu"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          />
        </div>
      </div>
      <div
        className="nice-control-group"
      >
        <span
          className="nice-input-addon"
        >
          Class
        </span>
        <div
          className="nice-dropdown nice-form-control"
        >
          <input
            className="nice-form-control"
            disabled={undefined}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyPress={null}
            placeholder="Class..."
            type={undefined}
            value=""
          />
          <ul
            className="dropdown-menu"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          />
        </div>
      </div>
      <div
        className="nice-control-group"
      >
        <span
          className="nice-input-addon"
        >
          Gender
        </span>
        <div
          className="nice-dropdown nice-form-control"
        >
          <button
            className="nice-btn"
            disabled={false}
            onClick={[Function]}
          >
            Gender...
            <i
              className="icon fa-angle-down"
            />
          </button>
          <ul
            className="dropdown-menu"
            onClick={[Function]}
          />
        </div>
      </div>
      <div
        className="nice-control-group"
      >
        <span
          className="nice-input-addon"
        >
          Alignment
        </span>
        <div
          className="nice-dropdown nice-form-control"
        >
          <button
            className="nice-btn"
            disabled={false}
            onClick={[Function]}
          >
            Alignment...
            <i
              className="icon fa-angle-down"
            />
          </button>
          <ul
            className="dropdown-menu"
            onClick={[Function]}
          />
        </div>
      </div>
      <div
        className="nice-control-group"
      >
        <span
          className="nice-input-addon"
        >
          Size
        </span>
        <div
          className="nice-dropdown nice-form-control"
        >
          <button
            className="nice-btn"
            disabled={false}
            onClick={[Function]}
          >
            Size...
            <i
              className="icon fa-angle-down"
            />
          </button>
          <ul
            className="dropdown-menu"
            onClick={[Function]}
          />
        </div>
      </div>
      <div
        className="nice-control-group"
      >
        <span
          className="nice-input-addon"
        >
          Level
        </span>
        <div
          className="nice-dropdown nice-form-control"
        >
          <button
            className="nice-btn"
            disabled={false}
            onClick={[Function]}
          >
            1
            <i
              className="icon fa-angle-down"
            />
          </button>
          <ul
            className="dropdown-menu"
            onClick={[Function]}
          >
            <li
              className="info"
              data-value={1}
              onClick={[Function]}
            >
              <a>
                1
              </a>
            </li>
            <li
              className={null}
              data-value={2}
              onClick={[Function]}
            >
              <a>
                2
              </a>
            </li>
            <li
              className={null}
              data-value={3}
              onClick={[Function]}
            >
              <a>
                3
              </a>
            </li>
            <li
              className={null}
              data-value={4}
              onClick={[Function]}
            >
              <a>
                4
              </a>
            </li>
            <li
              className={null}
              data-value={5}
              onClick={[Function]}
            >
              <a>
                5
              </a>
            </li>
            <li
              className={null}
              data-value={6}
              onClick={[Function]}
            >
              <a>
                6
              </a>
            </li>
            <li
              className={null}
              data-value={7}
              onClick={[Function]}
            >
              <a>
                7
              </a>
            </li>
            <li
              className={null}
              data-value={8}
              onClick={[Function]}
            >
              <a>
                8
              </a>
            </li>
            <li
              className={null}
              data-value={9}
              onClick={[Function]}
            >
              <a>
                9
              </a>
            </li>
            <li
              className={null}
              data-value={10}
              onClick={[Function]}
            >
              <a>
                10
              </a>
            </li>
            <li
              className={null}
              data-value={11}
              onClick={[Function]}
            >
              <a>
                11
              </a>
            </li>
            <li
              className={null}
              data-value={12}
              onClick={[Function]}
            >
              <a>
                12
              </a>
            </li>
            <li
              className={null}
              data-value={13}
              onClick={[Function]}
            >
              <a>
                13
              </a>
            </li>
            <li
              className={null}
              data-value={14}
              onClick={[Function]}
            >
              <a>
                14
              </a>
            </li>
            <li
              className={null}
              data-value={15}
              onClick={[Function]}
            >
              <a>
                15
              </a>
            </li>
            <li
              className={null}
              data-value={16}
              onClick={[Function]}
            >
              <a>
                16
              </a>
            </li>
            <li
              className={null}
              data-value={17}
              onClick={[Function]}
            >
              <a>
                17
              </a>
            </li>
            <li
              className={null}
              data-value={18}
              onClick={[Function]}
            >
              <a>
                18
              </a>
            </li>
            <li
              className={null}
              data-value={19}
              onClick={[Function]}
            >
              <a>
                19
              </a>
            </li>
            <li
              className={null}
              data-value={20}
              onClick={[Function]}
            >
              <a>
                20
              </a>
            </li>
            <li
              className={null}
              data-value={21}
              onClick={[Function]}
            >
              <a>
                21
              </a>
            </li>
            <li
              className={null}
              data-value={22}
              onClick={[Function]}
            >
              <a>
                22
              </a>
            </li>
            <li
              className={null}
              data-value={23}
              onClick={[Function]}
            >
              <a>
                23
              </a>
            </li>
            <li
              className={null}
              data-value={24}
              onClick={[Function]}
            >
              <a>
                24
              </a>
            </li>
            <li
              className={null}
              data-value={25}
              onClick={[Function]}
            >
              <a>
                25
              </a>
            </li>
            <li
              className={null}
              data-value={26}
              onClick={[Function]}
            >
              <a>
                26
              </a>
            </li>
            <li
              className={null}
              data-value={27}
              onClick={[Function]}
            >
              <a>
                27
              </a>
            </li>
            <li
              className={null}
              data-value={28}
              onClick={[Function]}
            >
              <a>
                28
              </a>
            </li>
            <li
              className={null}
              data-value={29}
              onClick={[Function]}
            >
              <a>
                29
              </a>
            </li>
          </ul>
        </div>
      </div>
      <div
        className="nice-control-group"
      >
        <span
          className="nice-input-addon"
        >
          Description
        </span>
        <div
          className="markdown-textedit preview"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <span
            className="markdown-textedit__placeholder"
          >
            Description...
          </span>
          <textarea
            className="nice-form-control"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="Description..."
            rows={5}
            value=""
          />
          <span
            className="markdown-textedit__preview"
          />
        </div>
      </div>
      <div
        className="clearfix"
      />
    </div>
  </div>,
  <div
    className="nice-panel npc-edit__statistics"
    id={undefined}
  >
    <div
      className="nice-panel-heading"
    >
      Statistics
    </div>
    <div
      className="nice-panel-content"
    >
      <table
        className="nice-table stats-block condensed bordered"
      >
        <thead>
          <tr>
            <th>
              Statistic
            </th>
            <th
              className="text-align-center"
            >
              Base
            </th>
            <th
              className="text-align-center"
            >
              Modifier
            </th>
          </tr>
        </thead>
        <tbody />
      </table>
      <div
        className="clearfix"
      />
    </div>
  </div>,
  <div
    className="nice-panel npc-edit__properties"
    id={undefined}
  >
    <div
      className="nice-panel-heading"
    >
      Properties
    </div>
    <div
      className="nice-panel-content"
    >
      <div
        className="nice-form-group"
      >
        <label>
          Traits
        </label>
        <ul
          className="list-component"
        >
          <li>
            <div>
              <input
                className="nice-form-control"
                disabled={undefined}
                onChange={[Function]}
                onKeyPress={null}
                placeholder="Name..."
                type={undefined}
                value=""
              />
              <div
                className="markdown-textedit preview"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
              >
                <span
                  className="markdown-textedit__placeholder"
                >
                  Description...
                </span>
                <textarea
                  className="nice-form-control"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  placeholder="Description..."
                  rows={5}
                  value=""
                />
                <span
                  className="markdown-textedit__preview"
                />
              </div>
            </div>
            <button
              className="nice-btn list-component__delete warning icon fa-minus"
              disabled={true}
              name="del"
              onClick={[Function]}
            >
              ​
            </button>
          </li>
        </ul>
      </div>
      <div
        className="clearfix"
      />
    </div>
  </div>,
]
`;

exports[`View NpcEdit should show an npc editor 1`] = `
Array [
  <div
    className="nice-panel npc-edit__description"
    id={undefined}
  >
    <div
      className="nice-panel-heading"
    >
      Description
    </div>
    <div
      className="nice-panel-content"
    >
      <div
        className="nice-control-group"
      >
        <span
          className="nice-input-addon"
        >
          Campaign
        </span>
        <div
          className="nice-dropdown nice-form-control"
        >
          <button
            className="nice-btn"
            disabled={false}
            onClick={[Function]}
          >
            Campaign...
            <i
              className="icon fa-angle-down"
            />
          </button>
          <ul
            className="dropdown-menu"
            onClick={[Function]}
          />
        </div>
      </div>
      <div
        className="nice-control-group"
      >
        <span
          className="nice-input-addon"
        >
          Name
        </span>
        <input
          className="nice-form-control"
          disabled={undefined}
          onChange={[Function]}
          onKeyPress={null}
          placeholder="Name..."
          type={undefined}
          value="Example NPC"
        />
      </div>
      <div
        className="nice-control-group"
      >
        <span
          className="nice-input-addon"
        >
          Location
        </span>
        <input
          className="nice-form-control"
          disabled={undefined}
          onChange={[Function]}
          onKeyPress={null}
          placeholder="Location..."
          type={undefined}
          value="Somewhere"
        />
      </div>
      <div
        className="nice-control-group"
      >
        <span
          className="nice-input-addon"
        >
          Organization
        </span>
        <input
          className="nice-form-control"
          disabled={undefined}
          onChange={[Function]}
          onKeyPress={null}
          placeholder="Organization..."
          type={undefined}
          value="D&D Machine, Inc."
        />
      </div>
      <div
        className="nice-control-group"
      >
        <span
          className="nice-input-addon"
        >
          Race
        </span>
        <div
          className="nice-dropdown nice-form-control"
        >
          <input
            className="nice-form-control"
            disabled={undefined}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyPress={null}
            placeholder="Race..."
            type={undefined}
            value=""
          />
          <ul
            className="dropdown-menu"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          />
        </div>
      </div>
      <div
        className="nice-control-group"
      >
        <span
          className="nice-input-addon"
        >
          Class
        </span>
        <div
          className="nice-dropdown nice-form-control"
        >
          <input
            className="nice-form-control"
            disabled={undefined}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyPress={null}
            placeholder="Class..."
            type={undefined}
            value=""
          />
          <ul
            className="dropdown-menu"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          />
        </div>
      </div>
      <div
        className="nice-control-group"
      >
        <span
          className="nice-input-addon"
        >
          Gender
        </span>
        <div
          className="nice-dropdown nice-form-control"
        >
          <button
            className="nice-btn"
            disabled={false}
            onClick={[Function]}
          >
            Male
            <i
              className="icon fa-angle-down"
            />
          </button>
          <ul
            className="dropdown-menu"
            onClick={[Function]}
          >
            <li
              className={null}
              data-value="genderless"
              onClick={[Function]}
            >
              <a>
                Genderless
              </a>
            </li>
            <li
              className="info"
              data-value="male"
              onClick={[Function]}
            >
              <a>
                Male
              </a>
            </li>
            <li
              className={null}
              data-value="female"
              onClick={[Function]}
            >
              <a>
                Female
              </a>
            </li>
          </ul>
        </div>
      </div>
      <div
        className="nice-control-group"
      >
        <span
          className="nice-input-addon"
        >
          Alignment
        </span>
        <div
          className="nice-dropdown nice-form-control"
        >
          <button
            className="nice-btn"
            disabled={false}
            onClick={[Function]}
          >
            Chaotic neutral
            <i
              className="icon fa-angle-down"
            />
          </button>
          <ul
            className="dropdown-menu"
            onClick={[Function]}
          >
            <li
              className={null}
              data-value="lawful good"
              onClick={[Function]}
            >
              <a>
                Lawful good
              </a>
            </li>
            <li
              className={null}
              data-value="neutral good"
              onClick={[Function]}
            >
              <a>
                Neutral good
              </a>
            </li>
            <li
              className={null}
              data-value="chaotic good"
              onClick={[Function]}
            >
              <a>
                Chaotic good
              </a>
            </li>
            <li
              className={null}
              data-value="lawful neutral"
              onClick={[Function]}
            >
              <a>
                Lawful neutral
              </a>
            </li>
            <li
              className={null}
              data-value="true neutral"
              onClick={[Function]}
            >
              <a>
                True neutral
              </a>
            </li>
            <li
              className="info"
              data-value="chaotic neutral"
              onClick={[Function]}
            >
              <a>
                Chaotic neutral
              </a>
            </li>
            <li
              className={null}
              data-value="lawful evil"
              onClick={[Function]}
            >
              <a>
                Lawful evil
              </a>
            </li>
            <li
              className={null}
              data-value="neutral evil"
              onClick={[Function]}
            >
              <a>
                Neutral evil
              </a>
            </li>
            <li
              className={null}
              data-value="chaotic evil"
              onClick={[Function]}
            >
              <a>
                Chaotic evil
              </a>
            </li>
          </ul>
        </div>
      </div>
      <div
        className="nice-control-group"
      >
        <span
          className="nice-input-addon"
        >
          Size
        </span>
        <div
          className="nice-dropdown nice-form-control"
        >
          <button
            className="nice-btn"
            disabled={false}
            onClick={[Function]}
          >
            Huge
            <i
              className="icon fa-angle-down"
            />
          </button>
          <ul
            className="dropdown-menu"
            onClick={[Function]}
          >
            <li
              className={null}
              data-value="tiny"
              onClick={[Function]}
            >
              <a>
                Tiny
              </a>
            </li>
            <li
              className={null}
              data-value="small"
              onClick={[Function]}
            >
              <a>
                Small
              </a>
            </li>
            <li
              className={null}
              data-value="medium"
              onClick={[Function]}
            >
              <a>
                Medium
              </a>
            </li>
            <li
              className={null}
              data-value="large"
              onClick={[Function]}
            >
              <a>
                Large
              </a>
            </li>
            <li
              className="info"
              data-value="huge"
              onClick={[Function]}
            >
              <a>
                Huge
              </a>
            </li>
            <li
              className={null}
              data-value="gargantuan"
              onClick={[Function]}
            >
              <a>
                Gargantuan
              </a>
            </li>
          </ul>
        </div>
      </div>
      <div
        className="nice-control-group"
      >
        <span
          className="nice-input-addon"
        >
          Level
        </span>
        <div
          className="nice-dropdown nice-form-control"
        >
          <button
            className="nice-btn"
            disabled={false}
            onClick={[Function]}
          >
            10
            <i
              className="icon fa-angle-down"
            />
          </button>
          <ul
            className="dropdown-menu"
            onClick={[Function]}
          >
            <li
              className={null}
              data-value={1}
              onClick={[Function]}
            >
              <a>
                1
              </a>
            </li>
            <li
              className={null}
              data-value={2}
              onClick={[Function]}
            >
              <a>
                2
              </a>
            </li>
            <li
              className={null}
              data-value={3}
              onClick={[Function]}
            >
              <a>
                3
              </a>
            </li>
            <li
              className={null}
              data-value={4}
              onClick={[Function]}
            >
              <a>
                4
              </a>
            </li>
            <li
              className={null}
              data-value={5}
              onClick={[Function]}
            >
              <a>
                5
              </a>
            </li>
            <li
              className={null}
              data-value={6}
              onClick={[Function]}
            >
              <a>
                6
              </a>
            </li>
            <li
              className={null}
              data-value={7}
              onClick={[Function]}
            >
              <a>
                7
              </a>
            </li>
            <li
              className={null}
              data-value={8}
              onClick={[Function]}
            >
              <a>
                8
              </a>
            </li>
            <li
              className={null}
              data-value={9}
              onClick={[Function]}
            >
              <a>
                9
              </a>
            </li>
            <li
              className="info"
              data-value={10}
              onClick={[Function]}
            >
              <a>
                10
              </a>
            </li>
            <li
              className={null}
              data-value={11}
              onClick={[Function]}
            >
              <a>
                11
              </a>
            </li>
            <li
              className={null}
              data-value={12}
              onClick={[Function]}
            >
              <a>
                12
              </a>
            </li>
            <li
              className={null}
              data-value={13}
              onClick={[Function]}
            >
              <a>
                13
              </a>
            </li>
            <li
              className={null}
              data-value={14}
              onClick={[Function]}
            >
              <a>
                14
              </a>
            </li>
            <li
              className={null}
              data-value={15}
              onClick={[Function]}
            >
              <a>
                15
              </a>
            </li>
            <li
              className={null}
              data-value={16}
              onClick={[Function]}
            >
              <a>
                16
              </a>
            </li>
            <li
              className={null}
              data-value={17}
              onClick={[Function]}
            >
              <a>
                17
              </a>
            </li>
            <li
              className={null}
              data-value={18}
              onClick={[Function]}
            >
              <a>
                18
              </a>
            </li>
            <li
              className={null}
              data-value={19}
              onClick={[Function]}
            >
              <a>
                19
              </a>
            </li>
            <li
              className={null}
              data-value={20}
              onClick={[Function]}
            >
              <a>
                20
              </a>
            </li>
            <li
              className={null}
              data-value={21}
              onClick={[Function]}
            >
              <a>
                21
              </a>
            </li>
            <li
              className={null}
              data-value={22}
              onClick={[Function]}
            >
              <a>
                22
              </a>
            </li>
            <li
              className={null}
              data-value={23}
              onClick={[Function]}
            >
              <a>
                23
              </a>
            </li>
            <li
              className={null}
              data-value={24}
              onClick={[Function]}
            >
              <a>
                24
              </a>
            </li>
            <li
              className={null}
              data-value={25}
              onClick={[Function]}
            >
              <a>
                25
              </a>
            </li>
            <li
              className={null}
              data-value={26}
              onClick={[Function]}
            >
              <a>
                26
              </a>
            </li>
            <li
              className={null}
              data-value={27}
              onClick={[Function]}
            >
              <a>
                27
              </a>
            </li>
            <li
              className={null}
              data-value={28}
              onClick={[Function]}
            >
              <a>
                28
              </a>
            </li>
            <li
              className={null}
              data-value={29}
              onClick={[Function]}
            >
              <a>
                29
              </a>
            </li>
          </ul>
        </div>
      </div>
      <div
        className="nice-control-group"
      >
        <span
          className="nice-input-addon"
        >
          Description
        </span>
        <div
          className="markdown-textedit preview"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <textarea
            className="nice-form-control"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="Description..."
            rows={5}
            value="Example NPC here"
          />
          <span
            className="markdown-textedit__preview"
          >
            <p>
              Example NPC here
            </p>
          </span>
        </div>
      </div>
      <div
        className="clearfix"
      />
    </div>
  </div>,
  <div
    className="nice-panel npc-edit__statistics"
    id={undefined}
  >
    <div
      className="nice-panel-heading"
    >
      Statistics
    </div>
    <div
      className="nice-panel-content"
    >
      <table
        className="nice-table stats-block condensed bordered"
      >
        <thead>
          <tr>
            <th>
              Statistic
            </th>
            <th
              className="text-align-center"
            >
              Base
            </th>
            <th
              className="text-align-center"
            >
              Bonus
            </th>
            <th
              className="text-align-center"
            >
              Final
            </th>
            <th
              className="text-align-center"
            >
              Modifier
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            className="text-align-center"
          >
            <th>
              Strength
            </th>
            <td>
              <div
                className="nice-dropdown nice-form-control"
              >
                <button
                  className="nice-btn"
                  disabled={false}
                  onClick={[Function]}
                >
                  
                  <i
                    className="icon fa-angle-down"
                  />
                </button>
                <ul
                  className="dropdown-menu"
                  onClick={[Function]}
                >
                  <li
                    className="heading"
                  >
                    <span>
                      Strength
                    </span>
                  </li>
                  <li
                    className="description"
                  >
                    <span>
                      Str
                    </span>
                  </li>
                  <li
                    className={null}
                    data-value={1}
                    onClick={[Function]}
                  >
                    <a>
                      1
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={2}
                    onClick={[Function]}
                  >
                    <a>
                      2
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={3}
                    onClick={[Function]}
                  >
                    <a>
                      3
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={4}
                    onClick={[Function]}
                  >
                    <a>
                      4
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={5}
                    onClick={[Function]}
                  >
                    <a>
                      5
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={6}
                    onClick={[Function]}
                  >
                    <a>
                      6
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={7}
                    onClick={[Function]}
                  >
                    <a>
                      7
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={8}
                    onClick={[Function]}
                  >
                    <a>
                      8
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={9}
                    onClick={[Function]}
                  >
                    <a>
                      9
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={10}
                    onClick={[Function]}
                  >
                    <a>
                      10
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={11}
                    onClick={[Function]}
                  >
                    <a>
                      11
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={12}
                    onClick={[Function]}
                  >
                    <a>
                      12
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={13}
                    onClick={[Function]}
                  >
                    <a>
                      13
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={14}
                    onClick={[Function]}
                  >
                    <a>
                      14
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={15}
                    onClick={[Function]}
                  >
                    <a>
                      15
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={16}
                    onClick={[Function]}
                  >
                    <a>
                      16
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={17}
                    onClick={[Function]}
                  >
                    <a>
                      17
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={18}
                    onClick={[Function]}
                  >
                    <a>
                      18
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={19}
                    onClick={[Function]}
                  >
                    <a>
                      19
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={20}
                    onClick={[Function]}
                  >
                    <a>
                      20
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={21}
                    onClick={[Function]}
                  >
                    <a>
                      21
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={22}
                    onClick={[Function]}
                  >
                    <a>
                      22
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={23}
                    onClick={[Function]}
                  >
                    <a>
                      23
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={24}
                    onClick={[Function]}
                  >
                    <a>
                      24
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={25}
                    onClick={[Function]}
                  >
                    <a>
                      25
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={26}
                    onClick={[Function]}
                  >
                    <a>
                      26
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={27}
                    onClick={[Function]}
                  >
                    <a>
                      27
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={28}
                    onClick={[Function]}
                  >
                    <a>
                      28
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={29}
                    onClick={[Function]}
                  >
                    <a>
                      29
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={30}
                    onClick={[Function]}
                  >
                    <a>
                      30
                    </a>
                  </li>
                </ul>
              </div>
            </td>
            <td>
              <div
                className="bonus inline"
              >
                0
              </div>
            </td>
            <td />
            <td>
              <div
                className="bonus inline"
              >
                —
              </div>
            </td>
          </tr>
          <tr
            className="text-align-center"
          >
            <th>
              Dexterity
            </th>
            <td>
              <div
                className="nice-dropdown nice-form-control"
              >
                <button
                  className="nice-btn"
                  disabled={false}
                  onClick={[Function]}
                >
                  
                  <i
                    className="icon fa-angle-down"
                  />
                </button>
                <ul
                  className="dropdown-menu"
                  onClick={[Function]}
                >
                  <li
                    className="heading"
                  >
                    <span>
                      Dexterity
                    </span>
                  </li>
                  <li
                    className="description"
                  >
                    <span>
                      Dex
                    </span>
                  </li>
                  <li
                    className={null}
                    data-value={1}
                    onClick={[Function]}
                  >
                    <a>
                      1
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={2}
                    onClick={[Function]}
                  >
                    <a>
                      2
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={3}
                    onClick={[Function]}
                  >
                    <a>
                      3
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={4}
                    onClick={[Function]}
                  >
                    <a>
                      4
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={5}
                    onClick={[Function]}
                  >
                    <a>
                      5
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={6}
                    onClick={[Function]}
                  >
                    <a>
                      6
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={7}
                    onClick={[Function]}
                  >
                    <a>
                      7
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={8}
                    onClick={[Function]}
                  >
                    <a>
                      8
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={9}
                    onClick={[Function]}
                  >
                    <a>
                      9
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={10}
                    onClick={[Function]}
                  >
                    <a>
                      10
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={11}
                    onClick={[Function]}
                  >
                    <a>
                      11
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={12}
                    onClick={[Function]}
                  >
                    <a>
                      12
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={13}
                    onClick={[Function]}
                  >
                    <a>
                      13
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={14}
                    onClick={[Function]}
                  >
                    <a>
                      14
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={15}
                    onClick={[Function]}
                  >
                    <a>
                      15
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={16}
                    onClick={[Function]}
                  >
                    <a>
                      16
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={17}
                    onClick={[Function]}
                  >
                    <a>
                      17
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={18}
                    onClick={[Function]}
                  >
                    <a>
                      18
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={19}
                    onClick={[Function]}
                  >
                    <a>
                      19
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={20}
                    onClick={[Function]}
                  >
                    <a>
                      20
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={21}
                    onClick={[Function]}
                  >
                    <a>
                      21
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={22}
                    onClick={[Function]}
                  >
                    <a>
                      22
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={23}
                    onClick={[Function]}
                  >
                    <a>
                      23
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={24}
                    onClick={[Function]}
                  >
                    <a>
                      24
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={25}
                    onClick={[Function]}
                  >
                    <a>
                      25
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={26}
                    onClick={[Function]}
                  >
                    <a>
                      26
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={27}
                    onClick={[Function]}
                  >
                    <a>
                      27
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={28}
                    onClick={[Function]}
                  >
                    <a>
                      28
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={29}
                    onClick={[Function]}
                  >
                    <a>
                      29
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={30}
                    onClick={[Function]}
                  >
                    <a>
                      30
                    </a>
                  </li>
                </ul>
              </div>
            </td>
            <td>
              <div
                className="bonus inline"
              >
                0
              </div>
            </td>
            <td />
            <td>
              <div
                className="bonus inline"
              >
                —
              </div>
            </td>
          </tr>
          <tr
            className="text-align-center"
          >
            <th>
              Constitution
            </th>
            <td>
              <div
                className="nice-dropdown nice-form-control"
              >
                <button
                  className="nice-btn"
                  disabled={false}
                  onClick={[Function]}
                >
                  
                  <i
                    className="icon fa-angle-down"
                  />
                </button>
                <ul
                  className="dropdown-menu"
                  onClick={[Function]}
                >
                  <li
                    className="heading"
                  >
                    <span>
                      Constitution
                    </span>
                  </li>
                  <li
                    className="description"
                  >
                    <span>
                      Con
                    </span>
                  </li>
                  <li
                    className={null}
                    data-value={1}
                    onClick={[Function]}
                  >
                    <a>
                      1
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={2}
                    onClick={[Function]}
                  >
                    <a>
                      2
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={3}
                    onClick={[Function]}
                  >
                    <a>
                      3
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={4}
                    onClick={[Function]}
                  >
                    <a>
                      4
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={5}
                    onClick={[Function]}
                  >
                    <a>
                      5
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={6}
                    onClick={[Function]}
                  >
                    <a>
                      6
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={7}
                    onClick={[Function]}
                  >
                    <a>
                      7
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={8}
                    onClick={[Function]}
                  >
                    <a>
                      8
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={9}
                    onClick={[Function]}
                  >
                    <a>
                      9
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={10}
                    onClick={[Function]}
                  >
                    <a>
                      10
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={11}
                    onClick={[Function]}
                  >
                    <a>
                      11
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={12}
                    onClick={[Function]}
                  >
                    <a>
                      12
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={13}
                    onClick={[Function]}
                  >
                    <a>
                      13
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={14}
                    onClick={[Function]}
                  >
                    <a>
                      14
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={15}
                    onClick={[Function]}
                  >
                    <a>
                      15
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={16}
                    onClick={[Function]}
                  >
                    <a>
                      16
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={17}
                    onClick={[Function]}
                  >
                    <a>
                      17
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={18}
                    onClick={[Function]}
                  >
                    <a>
                      18
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={19}
                    onClick={[Function]}
                  >
                    <a>
                      19
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={20}
                    onClick={[Function]}
                  >
                    <a>
                      20
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={21}
                    onClick={[Function]}
                  >
                    <a>
                      21
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={22}
                    onClick={[Function]}
                  >
                    <a>
                      22
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={23}
                    onClick={[Function]}
                  >
                    <a>
                      23
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={24}
                    onClick={[Function]}
                  >
                    <a>
                      24
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={25}
                    onClick={[Function]}
                  >
                    <a>
                      25
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={26}
                    onClick={[Function]}
                  >
                    <a>
                      26
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={27}
                    onClick={[Function]}
                  >
                    <a>
                      27
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={28}
                    onClick={[Function]}
                  >
                    <a>
                      28
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={29}
                    onClick={[Function]}
                  >
                    <a>
                      29
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={30}
                    onClick={[Function]}
                  >
                    <a>
                      30
                    </a>
                  </li>
                </ul>
              </div>
            </td>
            <td>
              <div
                className="bonus inline"
              >
                0
              </div>
            </td>
            <td />
            <td>
              <div
                className="bonus inline"
              >
                —
              </div>
            </td>
          </tr>
          <tr
            className="text-align-center"
          >
            <th>
              Intelligence
            </th>
            <td>
              <div
                className="nice-dropdown nice-form-control"
              >
                <button
                  className="nice-btn"
                  disabled={false}
                  onClick={[Function]}
                >
                  
                  <i
                    className="icon fa-angle-down"
                  />
                </button>
                <ul
                  className="dropdown-menu"
                  onClick={[Function]}
                >
                  <li
                    className="heading"
                  >
                    <span>
                      Intelligence
                    </span>
                  </li>
                  <li
                    className="description"
                  >
                    <span>
                      Int
                    </span>
                  </li>
                  <li
                    className={null}
                    data-value={1}
                    onClick={[Function]}
                  >
                    <a>
                      1
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={2}
                    onClick={[Function]}
                  >
                    <a>
                      2
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={3}
                    onClick={[Function]}
                  >
                    <a>
                      3
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={4}
                    onClick={[Function]}
                  >
                    <a>
                      4
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={5}
                    onClick={[Function]}
                  >
                    <a>
                      5
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={6}
                    onClick={[Function]}
                  >
                    <a>
                      6
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={7}
                    onClick={[Function]}
                  >
                    <a>
                      7
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={8}
                    onClick={[Function]}
                  >
                    <a>
                      8
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={9}
                    onClick={[Function]}
                  >
                    <a>
                      9
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={10}
                    onClick={[Function]}
                  >
                    <a>
                      10
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={11}
                    onClick={[Function]}
                  >
                    <a>
                      11
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={12}
                    onClick={[Function]}
                  >
                    <a>
                      12
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={13}
                    onClick={[Function]}
                  >
                    <a>
                      13
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={14}
                    onClick={[Function]}
                  >
                    <a>
                      14
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={15}
                    onClick={[Function]}
                  >
                    <a>
                      15
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={16}
                    onClick={[Function]}
                  >
                    <a>
                      16
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={17}
                    onClick={[Function]}
                  >
                    <a>
                      17
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={18}
                    onClick={[Function]}
                  >
                    <a>
                      18
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={19}
                    onClick={[Function]}
                  >
                    <a>
                      19
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={20}
                    onClick={[Function]}
                  >
                    <a>
                      20
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={21}
                    onClick={[Function]}
                  >
                    <a>
                      21
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={22}
                    onClick={[Function]}
                  >
                    <a>
                      22
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={23}
                    onClick={[Function]}
                  >
                    <a>
                      23
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={24}
                    onClick={[Function]}
                  >
                    <a>
                      24
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={25}
                    onClick={[Function]}
                  >
                    <a>
                      25
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={26}
                    onClick={[Function]}
                  >
                    <a>
                      26
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={27}
                    onClick={[Function]}
                  >
                    <a>
                      27
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={28}
                    onClick={[Function]}
                  >
                    <a>
                      28
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={29}
                    onClick={[Function]}
                  >
                    <a>
                      29
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={30}
                    onClick={[Function]}
                  >
                    <a>
                      30
                    </a>
                  </li>
                </ul>
              </div>
            </td>
            <td>
              <div
                className="bonus inline"
              >
                0
              </div>
            </td>
            <td />
            <td>
              <div
                className="bonus inline"
              >
                —
              </div>
            </td>
          </tr>
          <tr
            className="text-align-center"
          >
            <th>
              Wisdom
            </th>
            <td>
              <div
                className="nice-dropdown nice-form-control"
              >
                <button
                  className="nice-btn"
                  disabled={false}
                  onClick={[Function]}
                >
                  
                  <i
                    className="icon fa-angle-down"
                  />
                </button>
                <ul
                  className="dropdown-menu"
                  onClick={[Function]}
                >
                  <li
                    className="heading"
                  >
                    <span>
                      Wisdom
                    </span>
                  </li>
                  <li
                    className="description"
                  >
                    <span>
                      Wis
                    </span>
                  </li>
                  <li
                    className={null}
                    data-value={1}
                    onClick={[Function]}
                  >
                    <a>
                      1
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={2}
                    onClick={[Function]}
                  >
                    <a>
                      2
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={3}
                    onClick={[Function]}
                  >
                    <a>
                      3
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={4}
                    onClick={[Function]}
                  >
                    <a>
                      4
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={5}
                    onClick={[Function]}
                  >
                    <a>
                      5
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={6}
                    onClick={[Function]}
                  >
                    <a>
                      6
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={7}
                    onClick={[Function]}
                  >
                    <a>
                      7
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={8}
                    onClick={[Function]}
                  >
                    <a>
                      8
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={9}
                    onClick={[Function]}
                  >
                    <a>
                      9
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={10}
                    onClick={[Function]}
                  >
                    <a>
                      10
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={11}
                    onClick={[Function]}
                  >
                    <a>
                      11
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={12}
                    onClick={[Function]}
                  >
                    <a>
                      12
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={13}
                    onClick={[Function]}
                  >
                    <a>
                      13
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={14}
                    onClick={[Function]}
                  >
                    <a>
                      14
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={15}
                    onClick={[Function]}
                  >
                    <a>
                      15
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={16}
                    onClick={[Function]}
                  >
                    <a>
                      16
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={17}
                    onClick={[Function]}
                  >
                    <a>
                      17
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={18}
                    onClick={[Function]}
                  >
                    <a>
                      18
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={19}
                    onClick={[Function]}
                  >
                    <a>
                      19
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={20}
                    onClick={[Function]}
                  >
                    <a>
                      20
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={21}
                    onClick={[Function]}
                  >
                    <a>
                      21
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={22}
                    onClick={[Function]}
                  >
                    <a>
                      22
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={23}
                    onClick={[Function]}
                  >
                    <a>
                      23
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={24}
                    onClick={[Function]}
                  >
                    <a>
                      24
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={25}
                    onClick={[Function]}
                  >
                    <a>
                      25
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={26}
                    onClick={[Function]}
                  >
                    <a>
                      26
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={27}
                    onClick={[Function]}
                  >
                    <a>
                      27
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={28}
                    onClick={[Function]}
                  >
                    <a>
                      28
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={29}
                    onClick={[Function]}
                  >
                    <a>
                      29
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={30}
                    onClick={[Function]}
                  >
                    <a>
                      30
                    </a>
                  </li>
                </ul>
              </div>
            </td>
            <td>
              <div
                className="bonus inline"
              >
                0
              </div>
            </td>
            <td />
            <td>
              <div
                className="bonus inline"
              >
                —
              </div>
            </td>
          </tr>
          <tr
            className="text-align-center"
          >
            <th>
              Charisma
            </th>
            <td>
              <div
                className="nice-dropdown nice-form-control"
              >
                <button
                  className="nice-btn"
                  disabled={false}
                  onClick={[Function]}
                >
                  
                  <i
                    className="icon fa-angle-down"
                  />
                </button>
                <ul
                  className="dropdown-menu"
                  onClick={[Function]}
                >
                  <li
                    className="heading"
                  >
                    <span>
                      Charisma
                    </span>
                  </li>
                  <li
                    className="description"
                  >
                    <span>
                      Char
                    </span>
                  </li>
                  <li
                    className={null}
                    data-value={1}
                    onClick={[Function]}
                  >
                    <a>
                      1
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={2}
                    onClick={[Function]}
                  >
                    <a>
                      2
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={3}
                    onClick={[Function]}
                  >
                    <a>
                      3
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={4}
                    onClick={[Function]}
                  >
                    <a>
                      4
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={5}
                    onClick={[Function]}
                  >
                    <a>
                      5
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={6}
                    onClick={[Function]}
                  >
                    <a>
                      6
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={7}
                    onClick={[Function]}
                  >
                    <a>
                      7
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={8}
                    onClick={[Function]}
                  >
                    <a>
                      8
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={9}
                    onClick={[Function]}
                  >
                    <a>
                      9
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={10}
                    onClick={[Function]}
                  >
                    <a>
                      10
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={11}
                    onClick={[Function]}
                  >
                    <a>
                      11
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={12}
                    onClick={[Function]}
                  >
                    <a>
                      12
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={13}
                    onClick={[Function]}
                  >
                    <a>
                      13
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={14}
                    onClick={[Function]}
                  >
                    <a>
                      14
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={15}
                    onClick={[Function]}
                  >
                    <a>
                      15
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={16}
                    onClick={[Function]}
                  >
                    <a>
                      16
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={17}
                    onClick={[Function]}
                  >
                    <a>
                      17
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={18}
                    onClick={[Function]}
                  >
                    <a>
                      18
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={19}
                    onClick={[Function]}
                  >
                    <a>
                      19
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={20}
                    onClick={[Function]}
                  >
                    <a>
                      20
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={21}
                    onClick={[Function]}
                  >
                    <a>
                      21
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={22}
                    onClick={[Function]}
                  >
                    <a>
                      22
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={23}
                    onClick={[Function]}
                  >
                    <a>
                      23
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={24}
                    onClick={[Function]}
                  >
                    <a>
                      24
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={25}
                    onClick={[Function]}
                  >
                    <a>
                      25
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={26}
                    onClick={[Function]}
                  >
                    <a>
                      26
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={27}
                    onClick={[Function]}
                  >
                    <a>
                      27
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={28}
                    onClick={[Function]}
                  >
                    <a>
                      28
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={29}
                    onClick={[Function]}
                  >
                    <a>
                      29
                    </a>
                  </li>
                  <li
                    className={null}
                    data-value={30}
                    onClick={[Function]}
                  >
                    <a>
                      30
                    </a>
                  </li>
                </ul>
              </div>
            </td>
            <td>
              <div
                className="bonus inline"
              >
                0
              </div>
            </td>
            <td />
            <td>
              <div
                className="bonus inline"
              >
                —
              </div>
            </td>
          </tr>
        </tbody>
      </table>
      <div
        className="clearfix"
      />
    </div>
  </div>,
  <div
    className="nice-panel npc-edit__properties"
    id={undefined}
  >
    <div
      className="nice-panel-heading"
    >
      Properties
    </div>
    <div
      className="nice-panel-content"
    >
      <div
        className="nice-form-group"
      >
        <label>
          Traits
        </label>
        <ul
          className="list-component"
        >
          <li>
            <div>
              <input
                className="nice-form-control"
                disabled={undefined}
                onChange={[Function]}
                onKeyPress={null}
                placeholder="Name..."
                type={undefined}
                value=""
              />
              <div
                className="markdown-textedit preview"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
              >
                <span
                  className="markdown-textedit__placeholder"
                >
                  Description...
                </span>
                <textarea
                  className="nice-form-control"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  placeholder="Description..."
                  rows={5}
                  value=""
                />
                <span
                  className="markdown-textedit__preview"
                />
              </div>
            </div>
            <button
              className="nice-btn list-component__delete warning icon fa-minus"
              disabled={true}
              name="del"
              onClick={[Function]}
            >
              ​
            </button>
          </li>
        </ul>
      </div>
      <div
        className="clearfix"
      />
    </div>
  </div>,
]
`;
